src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
}

.App {
}

a {
  font-style: normal;
  color: inherit;
  text-decoration: none;
}

/* This file is primarily just for CSS Grid-related styles.  All other styles should be handled via styled-components. */

.container {
  width: 700px;
  margin-top: 10px;
  display: inline-grid;
  grid-template-columns: 175px auto 175px;
  grid-template-rows: 175px auto;
  grid-template-areas:
    "bubble header header"
    "main main main"
}

.bus-stop-detail, .bus-route-overview {
  grid-area: 1 / 1 / -1 / -1
}

.bus-stop-list-container {
  grid-column: 1 / -1;
}

.bus-route-name {
  grid-area: bubble;
}

.bus-route-header {
  grid-column: 1 / -1;
  display: grid;
  grid-template-columns: 175px auto 175px;
  grid-template-rows: 175px;
  grid-template-areas: "bubble header header";
  place-items: center;
}

.bus-route-info {
  grid-area: header;
  justify-self: left;
}

.bus-departure-details {
  grid-area: main;
}

.search-results {
  grid-column: 1 / -1;
}

.search-input {
  grid-column: 1 / -1;
  align-self: center;
}

